--- a/index.html
+++ b/index.html
@@ -311,6 +311,15 @@
             </div>
             <div class="paper-container">
                 <p class="paper-title">
+                    Peace and responsibility,
+                    <a target="blank" class="paper-link" href="./files/Peace-and-Responsibility.pdf">
+                        Read More
+                    </a>
+                </p>
+
+            </div>
+            <div class="paper-container">
+                <p class="paper-title">
                     ‘Human Rights of Addicted Person’,
                     <span class="papers-name">Essay Collection</span>
                 </p>
