--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             </div>
             <div class="paper-container">
                 <p class="paper-title">
-                    Peace and responsibility,
+                    Peace and responsibility.
                     <a target="blank" class="paper-link" href="./files/Peace-and-Responsibility.pdf">
                         Read More
                     </a>
